[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/flyerwalker/Flyerwalker.gd" type="Script" id=1]
[ext_resource path="res://enemies/flyerwalker/Flyerwalker_SM.gd" type="Script" id=2]
[ext_resource path="res://enemies/blueprint/icon.png" type="Texture" id=3]
[ext_resource path="res://multiuse_resources/HealthSystem.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Flyerwalker" type="KinematicBody2D" groups=[
"enemy",
"flyer",
]]
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="visuals" type="Node2D" parent="."]

[node name="main_sprite" type="Sprite" parent="visuals"]
texture = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="raycasts_down" type="Node2D" parent="."]

[node name="raycast_left" type="RayCast2D" parent="raycasts_down"]
position = Vector2( -30, 32 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 3

[node name="raycast_right" type="RayCast2D" parent="raycasts_down"]
position = Vector2( 30, 32 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 3

[node name="anim_enemy" type="AnimationPlayer" parent="."]

[node name="health_system" parent="." instance=ExtResource( 4 )]

[connection signal="health_changed" from="health_system" to="state_machine" method="_on_health_system_health_changed"]
